# deepmap

./: README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_world_map_cartopy.ipynb  02_shape_files.ipynb  03_gpkg.ipynb  04_geotiff.ipynb  05_gdb_files.ipynb  06_subset_tiff.ipynb  07_reproject_tiff.ipynb
scripts/: 01_preprocess.py  02_train.py  03_evaluate.py  README.md  config.yml  generate  preprocess.py  train.py
src/deepmap/: utils.py
src/deepmap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deepmap/data/: ondemand.py
src/deepmap/data/kreike/KreikeSampleExtractedDataNam52022.gdb/: a00000001.TablesByName.atx  a00000001.freelist  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000005.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000006.gdbtablx  a00000007.CatRelTypesByBackwardLabel.atx  a00000007.CatRelTypesByDestItemTypeID.atx  a00000007.CatRelTypesByForwardLabel.atx  a00000007.CatRelTypesByName.atx  a00000007.CatRelTypesByOriginItemTypeID.atx  a00000007.CatRelTypesByUUID.atx  a00000007.gdbtable  a00000007.gdbtablx  a00000009.freelist  a00000009.gdbtable  a00000009.gdbtablx  a00000009.spx  a0000000b.gdbtable  a0000000b.gdbtablx  a0000000b.spx  a0000000c.freelist  a0000000c.gdbtable  a0000000c.gdbtablx  a0000000c.spx  (+32 more)
src/deepmap/deepforest/: callbacks.py  dataset.py  evaluate.py  main.py  model.py  predict.py  utilities.py
src/deepmap/deepforest/models/: FasterRCNN.py  retinanet.py
src/deepmap/torch/: __init__.py  dataset.py  main.py
