[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmap"
version = "0.0.1"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "albumentations>=1.0.0",
    "cartopy",
    "fiona",
    "folium",
    "geopandas",
    "jupyterlab",
    "mapclassify",
    "matplotlib",
    "nbconvert",
    "opencv-python>=4.5.4",
    "pooch",
    "pytorch-lightning>1.5.8",
    "shapely<2",
    "torch",
    "torchvision>=0.13",
    "tensorboard"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
deepmap = ["data/**"]
